feat: add more fiat currencies + add many crypto currencies
